--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -110,11 +110,9 @@
         <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 
         <!-- rel! Fonts / Icons -->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 
         <!-- rel! Themes -->
-        <link rel="stylesheet" href="{% static 'css/Themes/dark-theme/dark-theme.css' %}">
         <link rel="stylesheet" href="{% static 'css/Themes/general-theme/general-theme.css' %}">
         <link rel="stylesheet" href="{% static 'css/Themes/highlight.css' %}">
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
