--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -183,7 +183,7 @@
                             <p>Hello <span class="superuser">{{ user.username }}</span></p>
                             <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Accounts">
                                 <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
-                                <a class="mb-0 btn btn-primary" href="{% url 'profile' %}">Profile Page</a>
+                                <a class="mb-0 btn btn-primary" href="{% url 'profile' slug=user.slug %}">Profile Page</a>
                             </div>
 
                             <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Posts">
@@ -207,7 +207,7 @@
                             <p>Hello <span class="staff">{{ user.username }}</span></p>
                             <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Account">
                                 <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
-                                <a class="mb-0 btn btn-primary" href="{% url 'profile' %}">Profile Page</a>
+                                <a class="mb-0 btn btn-primary" href="{% url 'profile' slug=user.slug %}">Profile Page</a>
                             </div>
 
                             <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Admin">
@@ -218,7 +218,7 @@
                             <p>Hello {{ user.username }}</p>
                             <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Account">
                                 <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
-                                <a class="mb-0 btn btn-primary" href="{% url 'profile' %}">Profile Page</a>
+                                <a class="mb-0 btn btn-primary" href="{% url 'profile' slug=user.slug %}">Profile Page</a>
                             </div>
 
                         {% endif %}
