--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -41,7 +41,7 @@
         </div>
 
     {% else %}
-        <h1><a class="coolLinks" href="/pages/kheee">This post is either private or still a draft, you must be logged in
+        <h1><a class="btn btn-danger" href="/pages/kheee">This post is either private or still a draft, you must be logged in
             to be able to see it</a></h1>
     {% endif %}
 {% endblock content_main %}
