--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -225,7 +225,7 @@
 
                     {% else %}
                         <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Account">
-                            <a class="mb-0 btn btn-primary" href="{% url 'account_signup' %}">Register</a>
+                            <a class="mb-0 btn btn-primary" href="{% url 'signup' %}">Register</a>
                             <a class="mb-0 btn btn-primary" href="{% url 'account_login' %}">Login</a>
                         </div>
 
