--- a/khoBlog/templates/account/login.html
+++ b/khoBlog/templates/account/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <h2>Login</h2>
-    <form method="POST" enctype="multipart/form-data" class="form">
+    <form method="POST" class="form">
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
