--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -189,6 +189,7 @@
                             <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Posts">
                                 <a class="mb-0 btn btn-primary" href="{% url 'blog:post_new' %}">New Post</a>
                                 <a class="mb-0 btn btn-primary" href="{% url 'blog:post_draft_list' %}">Drafts</a>
+                                <a class="mb-0 btn btn-primary" href="{% url 'blog:post_future_list' %}">Future</a>
                                 <a class="mb-0 btn btn-primary"
                                     href="{% url 'blog:post_private_list' %}">Private</a>
                             </div>
