--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -18,7 +18,7 @@
 
 {% block content_main %}
 
-    {% if post.published_date and not post.private or not post.published_date and user.is_superuser or post.private and user.is_superuser %}
+    {% if post.published_date and not post.private and not post.published_date > now or not post.published_date and user.is_superuser or post.private and user.is_superuser or post.published_date > now and user.is_superuser %}
 
         <div class="card text-white border-secondary bg-dark mb-3">
             <div class="card-header border-secondary">
