--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -10,7 +10,8 @@
             {% endif %}
 
         {% elif view_name == 'blog:post_detail' %}
-            {% if post.published_date and not post.private or not post.published_date and user.is_superuser or post.private and user.is_superuser %}
+            {% if post.published_date and not post.private and not post.published_date > now or not post.published_date and user.is_superuser or post.private and user.is_superuser or post.published_date > now and user.is_superuser %}
+
                 - {{ post.title }}
             {% else %}
                 - Private Post
