tweak the css and fix a typo (Clug -> Slug)

--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -32,7 +32,7 @@
                     <div class="card-body">
                         <h2 class="card-title">{{ item }}</h2>
                         <div class="blog-post-meta">
-                            Category Clug: {{ item.slug }}
+                            Category Slug: {{ item.slug }}
                             <br/>
                             Category Post Count: {{ item.cat.count }}
                         </div>
