--- a/khoBlog/static/css/custom.scss
+++ b/khoBlog/static/css/custom.scss
@@ -9,7 +9,8 @@ $info: $palette_info;
 
 $dark: $palette_dark;
 
-$enable-shadows: $enable-shadows;
+$link-color: $link-color;
+$link-hover-color: $link-hover-color;
 
 $font-family: $font-family-base;
 
