--- a/blog/templates/blog/postcomments.html
+++ b/blog/templates/blog/postcomments.html
@@ -6,16 +6,21 @@
             <div class="card text-white border-secondary bg-dark mt-3">
                 <div class="card-header">
                     <h4>{{ comment.author }}
-                        {% if not comment.approved_comment %}
-                            <span class="float-right">
+                        <span class="float-right">
+                            {% if not comment.approved_comment %}
                                 <a class="btn btn-light" href="{% url 'blog:comment_remove' pk=comment.pk %}"><span
                                         class="iconify" data-icon="foundation:page-remove"
                                         data-inline="false"></span></a>
+
                                 <a class="btn btn-light" href="{% url 'blog:comment_approve' pk=comment.pk %}"><span
                                         class="iconify" data-icon="emojione-monotone:ok-button"
                                         data-inline="false"></span></a>
-                            </span>
-                        {% endif %}
+                            {% endif %}
+
+                            <a class="btn btn-light" href="{% url 'blog:edit_post_comment' pk=comment.pk %}">
+                                <span class="iconify" data-icon="ant-design:edit-filled" data-inline="false"></span>
+                            </a>
+                        </span>
                     </h4>
                 </div>
                 <ul class="list-group list-group-flush">
